# dformat

./: .gitignore  Makefile  README  configure.ac  dformat
eg/: pdp8
src/: Makefile.am  dformat.awk
